--- a/ReminderProject/reminder/templates/reminder/register_page.html
+++ b/ReminderProject/reminder/templates/reminder/register_page.html
@@ -3,15 +3,23 @@
 
 <html>
     <header>
-        <link rel="stylesheet" href="{% static 'css/register_page.css' %}">
+        <link rel="stylesheet" href="{% static 'css/register_and_sign_in.css' %}">
         <title>Регистрация</title>
     </header>
     <body>
-        <div>
+        <div class="login-form">
             <form method="POST" class="post-form">
                 {% csrf_token %}
 
-                <div class="form-field">
+                <h2>Регистрация</h2>
+
+                {% if form.errors %}
+                <div class="alert-error">
+                    Пожалуйста, исправьте ошибки ниже
+                </div>
+                {% endif %}
+
+                <div class="form-group {% if form.username.errors %}has-error{% endif %}">
                     {{ form.username.label_tag }}
                     {{ form.username }}
                     {% if form.username.errors %}
@@ -19,7 +27,7 @@
                     {% endif %}
                 </div>
 
-                <div class="form-field">
+                <div class="form-group {% if form.email.errors %}has-error{% endif %}">
                     {{ form.email.label_tag }}
                     {{ form.email }}
                     {% if form.email.errors %}
@@ -27,24 +35,29 @@
                     {% endif %}
                 </div>
 
-                <div class="form-field">
+                <div class="form-group">
                     {{ form.first_name.label_tag }}
                     {{ form.first_name }}
                 </div>
 
-                <div class="form-field">
+                <div class="form-group">
                     {{ form.last_name.label_tag }}
                     {{ form.last_name }}
                 </div>
 
-                <div class="form-field">
+                <div class="form-group {% if form.password.errors %}has-error{% endif %}">
                     {{ form.password.label_tag }}
                     {{ form.password }}
                     {% if form.password.errors %}
                         <div class="error">{{ form.password.errors.0 }}</div>
                     {% endif %}
                 </div>
-                <button type="submit" class="submit">Зарегистрироваться</button>
+
+                <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+
+                <div class="login-links">
+                    <a href="/sign_in">Уже есть аккаунт? Войти</a>
+                </div>
             </form>
         </div>
     </body>
